<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            style="@style/BackgroundLinearLayout"
            android:orientation="vertical" >

            <LinearLayout style="@style/FormLayout" >

                <include layout="@layout/common_spinner_vehicles" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/etOdometer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:layout_weight="5"
                        android:background="@drawable/rounded_edittext"
                        android:hint="@string/odomoter_form"
                        android:inputType="numberDecimal" />

                    <CheckBox
                        android:id="@+id/chIsFull"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:hint="@string/is_full_form" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/etLiters"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:layout_weight="5"
                        android:background="@drawable/rounded_edittext"
                        android:hint="@string/liters_form"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/etPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:layout_weight="5"
                        android:background="@drawable/rounded_edittext"
                        android:hint="@string/fuel_price_form"
                        android:inputType="numberDecimal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/etStation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:layout_weight="5"
                        android:background="@drawable/rounded_edittext"
                        android:hint="@string/station_form"
                        android:inputType="text" />

                    <Spinner
                        android:id="@+id/spFuel"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="2dp"
                        android:layout_weight="5"
                        android:background="@drawable/rounded_spinner" >
                    </Spinner>
                </LinearLayout>

                <EditText
                    android:id="@+id/etObs"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/obs_form"
                    android:inputType="textMultiLine"
                    android:lines="3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_form" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_edittext" />

                    <ImageButton
                        android:id="@+id/btnDatePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:background="@drawable/icon_button"
                        android:src="@drawable/ic_action_go_to_today" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <!-- The navigation drawer -->

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#333"
        android:choiceMode="singleChoice"
        android:divider="#666"
        android:dividerHeight="1dp"
        android:paddingLeft="15sp"
        android:paddingRight="15sp" />

</android.support.v4.widget.DrawerLayout>